[gd_scene load_steps=5 format=3 uid="uid://dexjb6a0b7p2p"]

[ext_resource type="Script" uid="uid://yf3pbqbqfjbh" path="res://Scenes/Game/Game.gd" id="1_ln2h6"]
[ext_resource type="Texture2D" uid="uid://df02prb7x1if3" path="res://assets/background/rocks_2.png" id="1_rdw05"]
[ext_resource type="PackedScene" uid="uid://ddhba85ynjxd1" path="res://Scenes/Plane/Plane.tscn" id="2_gwu2e"]
[ext_resource type="PackedScene" uid="uid://crc0hwg4alk3h" path="res://Scenes/Barrier/Barrier.tscn" id="3_xbxml"]

[node name="Game" type="Node2D"]
script = ExtResource("1_ln2h6")

[node name="Rocks2" type="Sprite2D" parent="."]
position = Vector2(130, 333)
texture = ExtResource("1_rdw05")

[node name="Plane" parent="." instance=ExtResource("2_gwu2e")]
position = Vector2(82, 343)

[node name="Barrier" parent="." instance=ExtResource("3_xbxml")]

[node name="PipesHolder" type="Node" parent="."]

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 1.2
autostart = true

[node name="UpperMarker" type="Marker2D" parent="."]
position = Vector2(530, 154)

[node name="LowerMarker" type="Marker2D" parent="."]
position = Vector2(530, 576)

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
